--- a/DemoApp/Base.lproj/Main.storyboard
+++ b/DemoApp/Base.lproj/Main.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fxw-8Y-IXZ" customClass="StarMainControl" customModule="StarRating">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fxw-8Y-IXZ" customClass="StarMainControl" customModule="StarRatingDraggable">
+                                <rect key="frame" x="50" y="133" width="275" height="400"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="400" id="TuU-k6-dNQ"/>
@@ -37,8 +37,8 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="cancelText" value="Cancel"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0P6-ht-dxF" customClass="StarRatingView" customModule="StarRating">
-                                <rect key="frame" x="67" y="49" width="240" height="128"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0P6-ht-dxF" customClass="StarRatingView" customModule="StarRatingDraggable">
+                                <rect key="frame" x="20" y="40" width="335" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="selectedColor">
@@ -52,11 +52,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Fxw-8Y-IXZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7ts-Ew-TGB"/>
                             <constraint firstItem="Fxw-8Y-IXZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Avn-rm-Hj5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fxw-8Y-IXZ" secondAttribute="trailing" constant="50" id="UwG-Io-oQ2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0P6-ht-dxF" secondAttribute="trailing" constant="20" id="WUG-p0-Dfh"/>
                             <constraint firstItem="0P6-ht-dxF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hHh-TA-Gl3"/>
+                            <constraint firstItem="Fxw-8Y-IXZ" firstAttribute="top" secondItem="0P6-ht-dxF" secondAttribute="bottom" constant="92" id="lAj-Cx-wJg"/>
                             <constraint firstItem="0P6-ht-dxF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="p2Q-cS-8eQ"/>
                             <constraint firstItem="Fxw-8Y-IXZ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rxD-70-8TA"/>
                         </constraints>
