--- a/DemoApp/Base.lproj/Main.storyboard
+++ b/DemoApp/Base.lproj/Main.storyboard
@@ -18,52 +18,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fxw-8Y-IXZ" customClass="StarMainControl" customModule="StarRatingDraggable">
-                                <rect key="frame" x="50" y="133" width="275" height="400"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WdT-oE-ihw" customClass="StarMainControl" customModule="StarRatingDraggable">
+                                <rect key="frame" x="20" y="40" width="335" height="300"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="400" id="TuU-k6-dNQ"/>
+                                    <constraint firstAttribute="height" constant="300" id="XMB-an-B7I"/>
                                 </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="tt"/>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="descriptionText" value="dd"/>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="rateNowText" value="RateNow"/>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="selectedColor">
-                                        <color key="value" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="ratingInspectable">
-                                        <real key="value" value="3.2000000000000002"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="cancelText" value="Cancel"/>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0P6-ht-dxF" customClass="StarRatingView" customModule="StarRatingDraggable">
-                                <rect key="frame" x="20" y="40" width="335" height="1"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="selectedColor">
-                                        <color key="value" red="1" green="0.38640297849999999" blue="0.16987105990000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="ratingWillBeSetFromOutSide">
-                                        <real key="value" value="3.5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Fxw-8Y-IXZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Avn-rm-Hj5"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fxw-8Y-IXZ" secondAttribute="trailing" constant="50" id="UwG-Io-oQ2"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0P6-ht-dxF" secondAttribute="trailing" constant="20" id="WUG-p0-Dfh"/>
-                            <constraint firstItem="0P6-ht-dxF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hHh-TA-Gl3"/>
-                            <constraint firstItem="Fxw-8Y-IXZ" firstAttribute="top" secondItem="0P6-ht-dxF" secondAttribute="bottom" constant="92" id="lAj-Cx-wJg"/>
-                            <constraint firstItem="0P6-ht-dxF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="p2Q-cS-8eQ"/>
-                            <constraint firstItem="Fxw-8Y-IXZ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rxD-70-8TA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WdT-oE-ihw" secondAttribute="trailing" constant="20" id="D9C-fD-sFh"/>
+                            <constraint firstItem="WdT-oE-ihw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bhs-DD-O17"/>
+                            <constraint firstItem="WdT-oE-ihw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="lnc-vs-qTJ"/>
+                            <constraint firstItem="WdT-oE-ihw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zHN-qz-Oar"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="ssMain" destination="Fxw-8Y-IXZ" id="Kcb-tC-0VM"/>
+                        <outlet property="ssMain" destination="WdT-oE-ihw" id="lEg-Oe-5Ei"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
